<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <TextView
                    android:id="@+id/nombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:text="@string/nombre" />

                <EditText
                    android:id="@+id/editTextNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_weight="8"
                    android:ems="10"
                    android:hint="@string/pistaNombre"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/linearLayout"
                >

                <TextView
                    android:id="@+id/apellido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:text="@string/apellido">

                </TextView>

                <EditText
                    android:id="@+id/editTextApellido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_weight="8"
                    android:ems="10"
                    android:hint="@string/pistaApellido"
                    android:inputType="textPersonName" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/linearLayout2">

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:text="@string/email">

                </TextView>

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_weight="8"
                    android:ems="10"
                    android:hint="@string/pistaEmail"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/linearLayout3">

                <TextView
                    android:id="@+id/mensaje"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:text="@string/mensaje">

                </TextView>

                <EditText
                    android:id="@+id/editTextMensaje"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_margin="20dp"
                    android:layout_weight="8"
                    android:ems="10"
                    android:inputType="textMultiLine" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayout5">

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Subscribirse por correo"
                    android:layout_margin="20dp" />
            </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayoutEnlace"
            android:orientation="horizontal"
            android:layout_below="@+id/linearLayoutCheckBox">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/enlace"
                android:text="@string/enlace"
                android:autoLink="web"
                android:layout_margin="20dp"
                android:textSize="12sp"/>
        </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayoutTexto"
                android:orientation="horizontal"
                android:layout_below="@+id/linearLayoutEnlace">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/texto"
                    android:text="@string/texto"
                    android:autoLink="web"
                    android:layout_margin="20dp"
                    android:textSize="12sp"/>
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/botones"
            android:layout_below="@+id/linearLayoutTexto"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/botonConfirmar"
                android:layout_weight="1"
                android:text="Confirmar"
                android:layout_margin="20dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/botonCancelar"
                android:layout_weight="1"
                android:text="Cancelar"
                android:layout_margin="20dp"/>


        </LinearLayout>


        </RelativeLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>